compiler/testData/diagnostics/jvmIntegration/modules/internalJdkPackageUsage.fir.kt
// JDK_KIND: FULL_JDK_11
val z: <!JAVA_MODULE_DOES_NOT_EXPORT_PACKAGE!>sun.jvmstat.monitor.Monitor?<!> = null
